# Group6-cyphercafe

./: Admin.cpp  Admin.h  AdminController.h  AuthController.cpp  LoginWindow.cpp  PC.h  ProfileManager.h  README.md  RegisterWindow.ui  ReportManager.cpp  ReportManager.h  Session.h  SessionManager.cpp  SessionWindow.cpp  SessionWindow.h  SessionWindow.ui  TimerService.cpp  TimerService.h  TopUpWindow.cpp  TopUpWindow.ui  TransactionHistory.ui  User.h  admin_dashboard.css  admin_dashboard.html  admin_dashboard.js  applicationmanager.h  customer_management.css  customer_management.html  login.css  login.html  login.js  pc_monitor.html  pc_monitor.js  report.html  report.js  session_repository.cpp  session_repository.h  transaction_repository.h  user_repository.cpp
Administrator Module/Administrator/backend/: AdminController.cpp  PCMonitor.cpp  PCMonitor.h  admin_repository.cpp  admin_repository.h
Main UI/: main.cpp
PC & Session Management/: PC.cpp  Session.cpp  SessionManager.h
Payment Module/: TopUpWindow.h  Transaction.h  TransactionHistory.cpp
User & Authentication Module/: AuthController.h  CMakeLists.txt  LoginWindow.cpp  LoginWindow.h  LoginWindow.ui  ProfileManager.h  RegisterWindow.ui  User.h  applicationmanager.cpp  loginscreen.cpp  loginscreen.h  loginscreen.ui  mainwindow.cpp  mainwindow.h  navigationmanager.cpp  navigationmanager.h  posview.cpp  posview.h  posview.ui  user_repository.cpp
cypher cafe code/: BalanceManager.cpp  BalanceManager.h  PaymentManager.cpp  PaymentManager.h  Transaction.cpp  TransactionHistory.h  transaction_repository.cpp
(+3 files in other folders)
